--- a/Morsecret/Morsecret/Info.plist
+++ b/Morsecret/Morsecret/Info.plist
@@ -30,5 +30,9 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string></string>
 </dict>
 </plist>
