--- a/Morsecret/Morsecret/Info.plist
+++ b/Morsecret/Morsecret/Info.plist
@@ -30,6 +30,12 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Raleway-Bold.ttf</string>
+		<string>Raleway-Black.ttf</string>
+		<string>Raleway-Regular.ttf</string>
+	</array>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string></string>
 </dict>
